Update Alfresco SDK 2.x development environment setup.md